# socket_pair

./: README.md  setup.cfg  setup.py.back
src/socket_pair/: socket_pair.py  utils.py
tests/: int_mu.py  int_nu.py  int_pooja.py  int_rpi.py  int_wrapper.py  test_nu.py  test_pooja.py  test_rpi.py  test_usr_1.py  test_usr_2.py  test_usr_3.py
tests/extra/: test_nu.py  test_pooja.py  test_rpi.py  test_socket_pair.py
tests/test_file/: client.py  ss.py
tests/test_transfer/: wrapper.py  wrapper2.py  wrapper_sock.py  wrapper_sock2.py  xgroup.py  xgroup2.py  xgroup_sock.py
