[metadata]
name = socket_pair
version = 0.0.1
author = Ashraful Islam
author_email = asrafulashiq@gmail.com
description = "A simple socket pair for the CLASP project"
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.4
install_requires =
    loguru
    pyzmq
    psutil
    numpy

[options.packages.find]
where = src
